# Transcribot

./: README.md  pyproject.toml
Docs/: Transcribot — Transcripción Local con IA 335c9238bd0f8138bf54c80e66575b68.md
Docs/Transcribot — Transcripción Local con IA/: ADRs — Decisiones de Arquitectura 335c9238bd0f8109a29de7c6d2445f5b.md  Arquitectura 335c9238bd0f8173bebcc2be7f149044.md  Plan de Oleadas 335c9238bd0f814eb7d8c362dff860f7.md
Docs/Transcribot — Transcripción Local con IA/Plan de Oleadas/: W-001 — Scaffolding + Extracción de Audio 335c9238bd0f817fa049f888ba014e39.md  W-002 — Motor de Transcripción 335c9238bd0f81848dbbd9dcedcd886c.md  W-003 — Diarización de Locutores 335c9238bd0f81f987f6f73ba6a2dd05.md  W-004 — Alineación + Output 335c9238bd0f8194b34dcadf467da1d2.md  W-005 — CLI, Config y Hardening 335c9238bd0f81a390e2cbee5f2622a3.md
config/: default.yaml
src/transcribot/: aligner.py  audio.py  chunker.py  cli.py  config.py  diarizer.py  formatter.py  hardware.py  logger.py  pipeline.py  transcriber.py
tests/: conftest.py  test_audio.py  test_chunker.py  test_transcriber.py
